--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -18,7 +18,7 @@ license="All rights reserved"
 [[mods]] #mandatory
 
 # The modid of the mod
-modId="agge" #mandatory
+modId="slothmod" #mandatory
 
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
